--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                 <h3 class="description__title">Почему партнеры выбирают нас</h3>
 
                 <ul class="description__list">
-                    <li class="description__list-item">Команда профессионалов</li>
-                    <li class="description__list-item">Высокое качество услуг</li>
-                    <li class="description__list-item">Гибкая ценовая политика</li>
+                    <li class="description__list-item"><img class="description__list-pic"
+                            src="images/number1.svg">Команда профессионалов</li>
+                    <li class="description__list-item"><img class="description__list-pic"
+                            src="images/number2.svg">Высокое качество услуг</li>
+                    <li class="description__list-item"><img class="description__list-pic"
+                            src="images/number3.svg">Гибкая ценовая политика</li>
                 </ul>
-                <img src="images/phone.png">
+                <img src="images/phone.svg">
             </section>
 
             <section class="services">
@@ -69,7 +72,13 @@
                     </div>
                 </div>
             </section>
-
+            <section class="promo">
+                <div class="promo__form">
+                <p class="promo__text">Хотите оперативно узнать
+                    стоимость проекта?</p>
+                <button class="button promo__button">Отправить заявку</button>
+            </div>
+            </section>
 
 
         </main>
